--- a/blocks/objects/__text/objects__text.css
+++ b/blocks/objects/__text/objects__text.css
@@ -1,6 +1,6 @@
 .objects__text {
   margin: 0;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
