--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,7 @@
 @import url(../styles/normalize.css);
 @import url(../fonts/ProximaNova/stylesheet.css);
 @import url(../fonts/Akronim/stylesheet.css);
+@import url(../fonts/ubuntu/stylesheet.css);
 
 @import url(../blocks/page-grey/page-grey.css);
 @import url(../blocks/content-grey/content-grey.css);
@@ -38,6 +39,7 @@
 @import url(../blocks/achivmients/achivmients.css);
 @import url(../blocks/achivmients/__ach/achivmients__ach.css);
 @import url(../blocks/achivmients/__count/achivmients__count.css);
+@import url(../blocks/achivmients/__count/_text/achivmients__count_text.css);
 @import url(../blocks/achivmients/__plus/achivmients__plus.css);
 @import url(../blocks/achivmients/__text/achivmients__text.css);
 @import url(../blocks/info/__experience/info__experience.css);
@@ -57,6 +59,7 @@
 @import url(../blocks/form/__agree/form__agree.css);
 @import url(../blocks/form/__checkbox/form__checkbox.css);
 @import url(../blocks/form/__submit/form__submit.css);
+@import url(../blocks/form/__agree/_color/form__agree_color.css);
 
 @import url(../blocks/form-request/form-request.css);
 @import url(../blocks/overlay/overlay.css);
@@ -64,4 +67,14 @@
 
 @import url(../blocks/overlay/_visible/overlay_visible.css);
 @import url(../blocks/form-request/__close/form-request__close.css);
+@import url(../blocks/form-request/__bottom/form-request__bottom.css);
+@import url(../blocks/form-request/__check/form-request__check.css);
+@import url(../blocks/form-request/__submit/form-request__submit.css);
+@import url(../blocks/form-request/__title/form-request__title.css);
+@import url(../blocks/form-request/__text/form-request__text.css);
 @import url(../blocks/button/button.css);
+
+@import url(../blocks/error/error.css);
+@import url(../blocks/form/__input/_invaild/form__input_invalid.css);
+@import url(../blocks/form/__submit/_invalid/form__submit_invalid.css);
+@import url(../blocks/header/__link/_underline/header__link_underline.css);
