--- a/blocks/form-request/form-request.css
+++ b/blocks/form-request/form-request.css
@@ -1,4 +1,7 @@
 .form-request{
+    grid-template-columns: 40% 55% 5%;
+    grid-template-rows: 356px;
     width: 475px;
     height: 459px;
+    margin: 50px 0 0;
 }
