--- a/blocks/form/__text/form__text.css
+++ b/blocks/form/__text/form__text.css
@@ -1,5 +1,5 @@
 .form__text {
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
