--- a/blocks/header/__button/header__button.css
+++ b/blocks/header/__button/header__button.css
@@ -3,4 +3,6 @@
     background-color: rgba(255, 255, 255, 0);
     border:1px solid rgb(255, 255, 255);
     padding: 17px 34px;
+    white-space: nowrap;
+    text-align: center;
 }
